Found a better fix to icon spacing, I think...

--- a/content/css/partials/_global.scss
+++ b/content/css/partials/_global.scss
@@ -391,11 +391,6 @@ input.button {
 .menu {
   li {
     display: inline-block;
-
-    // To fix the inline-block whitespace issue, however in this
-    // case I want a space between the elements, even when the HTML
-    // is minimized.
-    margin-right: 6px;
   }
 }
 
