--- a/content/css/partials/_icons.scss
+++ b/content/css/partials/_icons.scss
@@ -17,10 +17,15 @@
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
+  margin-right: 0.06em;
 
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+.small [class^="icon-"], .small [class*=" icon-"] {
+  margin-right: 0.15em;
 }
 
 .icon-mail:before {
